Apply code reviews (#35)
* fix port on source test and use correct checkNotNull library

* fix readme code detection

* add more tests and worked reviews

* fix port in source test

* fix logging problems and revert log4j version

* revert log4j2 properties and delete log4j properties

* remove properties and add configuration

* add javadocs

* add IOException to (de)serializer

* remove unused imports

* delombok project

* Add sensor to source architecture image

* add more line to unit test

* Update README

* Fix README formatting

* Update flink-connector-influxdb2/src/main/java/org/apache/flink/streaming/connectors/influxdb/common/InfluxParser.java

Co-authored-by: Leon <32157576+1p4pk@users.noreply.github.com>

* Use global flink version.

* Use HttpURLConnection variable.

* Update flink-connector-influxdb2/src/test/java/org/apache/flink/streaming/connectors/influxdb/InfluxDBSourceIntegrationTestCase.java

* add assertion to test

Co-authored-by: Felix Seidel <felix@seidel.me>
Co-authored-by: Leon <32157576+1p4pk@users.noreply.github.com>
Co-authored-by: 1p4pk <leonpapke@gmx.de>